# conf

./: .gitignore  README  flake.nix  ssh_host_rsa_key.gpg
disks/: luks.nix  simple.nix  zfs.nix
docs/: NOTES  agenix.md  bootstrap.md  disko.md  hydra-init.md
home/kaptch/: alacritty.nix  bash.nix  configuration.nix  emacs.nix  hyprland.nix  services.nix  sway.nix  vim-conf.nix  vim.nix  waybar.nix  wlogout.nix
home/kaptch-mac/: configuration.nix  emacs.nix  vim.nix
lib/: default.nix
misc/minecraft-mods-custom/: checksums.json  index.toml  pack.toml
misc/minecraft-mods-simple/: checksums.json  index.toml  pack.toml
modules/: authelia.nix  ca.nix  calendar.nix  minecraft.nix  mosquitto.nix  nginx.nix  notifications.nix  remote_unlock.nix  sshd.nix  vm.nix
overlays/: cozy.nix  default.nix  pmbootstrap.nix  viu.nix  waybar.nix
patches/: cozy.diff  waybar.diff  xwaylandvideobridge.diff
pkgs/: default.nix
pkgs/hello/: default.nix
pkgs/xwaylandvideobridge/: default.nix
scripts/: activate-home.sh  darwin-build.sh  darwin-install.sh  deploy-anywhere.sh  disko.sh  partition.sh  server-deploy.sh
secrets/: mosquitto.age  secrets.nix
systems/gateway-server/: configuration.nix
systems/laptop-linux/: configuration.nix  users.nix
systems/laptop-mac/: configuration.nix
systems/main-server/: configuration.nix
systems/minecraft-server/: configuration.nix
systems/phone-cross/: configuration.nix
systems/rpi3/: configuration.nix
templates/agda/: flake.nix  main.agda  template.agda-lib
templates/haskell/: cabal.project  flake.nix  template.cabal
(+25 files in other folders)
